<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <group android:id="@+id/menu_actionbar" >
        <item
            android:id="@+id/menuitem_pesquisar"
            android:actionViewClass="android.widget.SearchView"
            android:icon="@android:drawable/ic_menu_search"

            android:title="@string/menu_item_pesquisar"/>
        <item
            android:id="@+id/menuitem_novo"
            app:showAsAction="never"
            android:title="@string/menu_item_novo" />
        <item
            android:id="@+id/menuitem_salvar"
            app:showAsAction="never"
            android:title="@string/menu_item_salvar" />
        <item
            android:id="@+id/menuitem_excluir"
            app:showAsAction="never"
            android:title="@string/menu_item_excluir"  />
        <item
            android:id="@+id/menuitem_cancelar"
            app:showAsAction="never"
            android:title="@string/menu_item_cancelar"  />
    </group>
</menu>