<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_cpu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tela1_cpu" />

                <TextView
                    android:id="@+id/tv_item_cpu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_marca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tela1_marca" />

                <TextView
                    android:id="@+id/tv_item_marca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_ram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tela1_ram" />

                <TextView
                    android:id="@+id/tv_item_ram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/label_hd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tela1_hd" />

                <TextView
                    android:id="@+id/tv_item_hd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>